feat: 주문 Dto 메서드 수정 (#21)